tests/grammar/snapshots/r#mod__grammar__alpha034__le.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1 <= 2\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    Le(
                        Number(
                            1.0,
                        ),
                        (),
                        Number(
                            2.0,
                        ),
                    ),
                ),
                None,
            ),
        ),
    ],
)
