tests/grammar/snapshots/r#mod__grammar__alpha034__loops-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"loop var1 in 1..2 {}\").unwrap()"
---
(
    Statement(
        [
            (
                IterLoop(
                    (
                        Single(
                            (
                                "var1",
                                5..9,
                            ),
                        ),
                        5..9,
                    ),
                    (
                        Range(
                            (
                                Number(
                                    (
                                        1.0,
                                        13..14,
                                    ),
                                ),
                                13..14,
                            ),
                            (
                                Number(
                                    (
                                        2.0,
                                        16..17,
                                    ),
                                ),
                                16..17,
                            ),
                        ),
                        13..17,
                    ),
                    (
                        Block(
                            [],
                        ),
                        18..20,
                    ),
                ),
                0..20,
            ),
        ],
    ),
    0..20,
)
