tests/grammar/snapshots/r#mod__grammar__alpha034__loops-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"loop var1, var2 in 1..2 {}\"))"
---
[
    (
        Statement(
            (
                IterLoop(
                    (
                        "loop",
                        0..4,
                    ),
                    (
                        WithIndex(
                            (
                                "var1",
                                5..9,
                            ),
                            (
                                "var2",
                                11..15,
                            ),
                        ),
                        5..15,
                    ),
                    (
                        "in",
                        16..18,
                    ),
                    (
                        Range(
                            (
                                Number(
                                    (
                                        1.0,
                                        19..20,
                                    ),
                                ),
                                19..20,
                            ),
                            (
                                Number(
                                    (
                                        2.0,
                                        22..23,
                                    ),
                                ),
                                22..23,
                            ),
                        ),
                        19..23,
                    ),
                    (
                        Block(
                            [],
                        ),
                        24..26,
                    ),
                ),
                0..26,
            ),
        ),
        0..26,
    ),
]
