tests/grammar/snapshots/r#mod__grammar__alpha034__loops.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"loop {}\").unwrap()"
---
(
    Statement(
        [
            (
                InfiniteLoop(
                    (
                        Block(
                            [],
                        ),
                        5..7,
                    ),
                ),
                0..7,
            ),
        ],
    ),
    0..7,
)
