tests/grammar/snapshots/r#mod__grammar__alpha034__main_block-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"main\"))"
---
(
    Some(
        [
            (
                Main(
                    [],
                ),
                0..4,
            ),
        ],
    ),
    [
        found end of input at 0..4 expected '"{"',
        found end of input at 0..4 expected '"{"', "statement", or '"}"',
    ],
)
